frontend/tests/cases/negative/polymorph.gr
foo : forall {a b c : Type} . (a -> a) [2] -> (b × c) -> (b × c)
foo [f] (x,y) = (f x, f y)