frontend/tests/cases/negative/polymorph.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/polymorph.gr:2:25:
Expected `c` but got `a`